Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>

Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>

	* lib/mkmf.rb (try_config): Fix to not replace $LDFLAGS with $libs
	  (1.9.3 behavior) [ruby-core:55752] [Bug #8595]

Tue Jul  2 00:39:59 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): Don't try mismatched
	  address family if already failed.

Mon Jul  1 23:07:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* template/encdb.h.tmpl: define encoding index macros to use the index
	  statically from C source.

Mon Jul  1 22:57:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul2): New function.
	  (rb_cstr_to_inum): Use a better algorithm to compose the result
	  if input length is very long.

Mon Jul  1 20:22:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* ext/bigdecimal/bigdecimal.h (RB_UNUSED_VAR, UNREACHABLE):
	  import macros from ruby.h for 1.9.3.
	  [Bug #8588] [ruby-core:55730]

	* ext/bigdecimal/bigdecimal.gemspec: Bump version to 1.2.1.

Mon Jul  1 20:03:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): Use an address
	  family for local address which is different to the remote
	  address if no other choice.

Mon Jul  1 15:05:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV#<<): use StringIO#set_encoding instead of creating
	  new StringIO instance with String#force_encoding, forcing encoding
	  discards the cached coderange bits and can make further operations
	  very slow.  [ruby-core:55714] [Bug #8585]

	* ext/stringio/stringio.c (strio_write): keep coderange of
	  ptr->string.

	* string.c (rb_enc_cr_str_buf_cat, rb_str_append): consider an empty
	  string 7bit-clean and should not discard cached coderange of string
	  to be appended.

Mon Jul  1 12:56:41 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_using_module): activate refinements in the ancestors of
	  the argument module to support refinement inheritance by