@@ -1,2 +1,3 @@
 #define NO_LOCALE_CHARMAP 1
+#define NO_PRESERVED_ENCODING 1
 #include "encoding.c"
