@@ -1,3 +1,9 @@
+Tue Jul  2 17:22:12 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (rb_enc_init): register preserved indexes.
+
+	* internal.h (ruby_preserved_encindex): move from encoding.c.
+
 Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>
 
 Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>
